Bug-fix: Placeholder Home Page: Front-end: Modal Content: Align Top

--- a/css/modules/modal-box.css
+++ b/css/modules/modal-box.css
@@ -28,7 +28,8 @@
 
 .modal-box-content {
 	display: none;
-	align-items: center;
+	/*align-items: center;*/
+	align-items: flex-start;
 	justify-content: center;
 	position: relative;
 	width: 100%;
